--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
+              "./node_modules/ngx-ui-switch/ui-switch.component.css"
+
             ],
             "scripts": []
           },
